--- a/app/src/main/res/layout/activity_convert_temperature_class.xml
+++ b/app/src/main/res/layout/activity_convert_temperature_class.xml
@@ -6,4 +6,37 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ConvertTemperatureClass">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/inputVal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="86dp"
+        android:textSize="32dp"
+        android:hint="Enter a value..." />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/outputVal"
+        android:layout_marginTop="54dp"
+        android:layout_below="@+id/inputVal"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_marginTop="47dp"
+        android:layout_below="@+id/outputVal"
+        android:layout_centerHorizontal="true"
+        android:onClick="showCelcius" />
+
 </RelativeLayout>
